<resources>
    <string name="app_name">CELPA</string>
    <string name="take_photo">Take photo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait</string>
    <string name="no_of_fertilizers_used">No. of fertilizers used per day</string>
    <string name="approx_date_of_harvest">Approx. date of harvest</string>
    <string name="no_of_applied_water_per_day">No. of applied water per day</string>
    <string name="save_crop_details">Save</string>
    <string name="logout">Logout</string>
    <string name="list">List</string>
    <string name="weather">Weather</string>
    <string name="location">Location</string>
    <string name="crop_name">Crop name</string>
    <string name="approx_date">Approx date</string>
    <string name="change">Change</string>
    <string name="ok">OK</string>
    <string name="saved_crop">Crop has been saved!</string>
    <string name="invalid_login">Invalid username/password!</string>
    <string name="getting_location">Getting location...</string>
    <string name="getting_weather">Getting weather...</string>
    <string name="parsing_image">Parsing image...</string>
    <string name="logging_out">Logging out...</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="registering">Registering...</string>
    <string name="registered_farmer">You are now registered!</string>
    <string name="fill_up_all_fields">Please fill up all the correct fields!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_fail">Password must be the same!</string>
    <string name="getting_crops">Getting crops...</string>
    <string name="crop_image">Crop image</string>
    <string name="harvest_date">Harvest date</string>
    <string name="sample">Sample</string>
    <string name="refresh">Refresh</string>
    <string name="planted_start_date">Date and time planted</string>
    <string name="mobile_number">Mobile number</string>
    <string name="quantity">Quantity of current lived crops</string>
    <string name="crop_planted_duration">No. of days crops are planted</string>
    <string name="set_min_sq_meter">Set minimum sqm to be planted</string>
    <string name="sq_meters">sqm</string>
    <string name="post_to_market_msg">Do you want to post crop immediately to market?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hectares">hectares</string>
    <string-array name="crop_name_defaults">
        <item>Lettuce</item>
        <item>Cucumber</item>
        <item>Chili(Pangsigang)</item>
        <item>Other</item>
    </string-array>
    <string-array name="crop_fertilizer_unit_defaults">
        <item>liters</item>
        <item>sacks</item>
    </string-array>
    <string-array name="crop_water_unit_defaults">
        <item>liters</item>
        <item>ml</item>
    </string-array>
</resources>
