<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:paddingRight="10dp"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/txt_crop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextView"
                android:text="@string/crop_name"
                android:padding="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <ImageView
                android:id="@+id/iv_crop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/crop_image"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_crop_name"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@mipmap/ic_launcher"
                />


            <FrameLayout
                android:id="@+id/fl_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/iv_crop"
                app:layout_constraintLeft_toRightOf="@+id/iv_crop"
                >

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    app:flexWrap="wrap"
                    >

                    <TextView
                        android:id="@+id/txt_location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTextView"
                        android:text="@string/location"
                        android:layout_marginRight="5dp"
                        android:padding="0dp"
                        />

                    <TextView
                        android:id="@+id/txt_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTextView"
                        android:padding="0dp"
                        android:textStyle="bold"
                        tools:text="asdfasdfasdfasdfasdfaasdfasdfsdsdfasdfasdfs"
                        />

                </com.google.android.flexbox.FlexboxLayout>

            </FrameLayout>


            <TextView
                android:id="@+id/txt_weather_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextView"
                android:text="@string/weather"
                android:padding="0dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toBottomOf="@+id/fl_location"
                app:layout_constraintLeft_toRightOf="@+id/iv_crop"
                />

            <TextView
                android:id="@+id/txt_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextView"
                android:textStyle="bold"
                android:padding="0dp"
                android:layout_marginLeft="5dp"
                app:layout_constraintTop_toBottomOf="@+id/fl_location"
                app:layout_constraintLeft_toRightOf="@+id/txt_weather_label"
                tools:text="@string/sample"
                />

            <TextView
                android:id="@+id/txt_approx_date_harvest_label"
                style="@style/AppTextView"
                android:text="@string/harvest_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toRightOf="@+id/iv_crop"
                app:layout_constraintTop_toBottomOf="@+id/txt_weather_label"
                />

            <TextView
                android:id="@+id/txt_approx_date_harvest"
                style="@style/AppTextView"
                tools:text="@string/harvest_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@+id/txt_weather_label"
                app:layout_constraintLeft_toRightOf="@+id/txt_approx_date_harvest_label"
                />

            <TextView
                android:id="@+id/txt_ferts_used_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextView"
                android:text="@string/no_of_fertilizers_used"
                android:padding="0dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toRightOf="@+id/iv_crop"
                app:layout_constraintTop_toBottomOf="@+id/txt_approx_date_harvest_label"
                />

            <TextView
                android:id="@+id/txt_ferts_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextView"
                android:padding="0dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/txt_ferts_used_label"
                app:layout_constraintTop_toTopOf="@id/txt_ferts_used_label"
                tools:text="@string/sample"
                />

            <TextView
                android:id="@+id/txt_water_applied_label"
                style="@style/AppTextView"
                android:text="@string/no_of_applied_water_per_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toBottomOf="@id/txt_ferts_used_label"
                app:layout_constraintLeft_toRightOf="@+id/iv_crop"
                />

            <TextView
                android:id="@+id/txt_water_applied"
                style="@style/AppTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/txt_water_applied_label"
                app:layout_constraintLeft_toRightOf="@id/txt_water_applied_label"
                tools:text="@string/sample" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
    




</android.support.constraint.ConstraintLayout>